<resources>
    <string name="app_name">PesquisaDeOpiniao</string>

    <string name="opinion_survey">Pesquisa de Opinião</string>
    <string name="button_participate_survey">Participar da Pesquisa</string>
    <string name="button_check_vote">Checar meu Voto</string>
    <string name="button_count">Contabilizar Votos</string>

    <string name="inform_user">Informar Usuário</string>
    <string name="hint_prontuario">Prontuário</string>
    <string name="hint_name">Nome</string>
    <string name="button_advance">Cadastrar</string>

    <string name="register_vote">Registrar Voto</string>
    <string name="question">O que você acha de caldo de cana?</string>
    <string name="option_otimo">Ótimo</string>
    <string name="option_bom">Bom</string>
    <string name="option_regular">Regular</string>
    <string name="option_ruim">Ruim</string>
    <string name="vote_button">Votar</string>
    <string name="menu_vote_title">Menu Pesquisa</string>
    <string name="make_vote_button">Enviar Voto</string>
    <string name="insert_vote_button">Inserir Voto</string>
    <string name="title_inform_key">Informe a sua chave</string>
    <string name="input_vote_key">Chave do Voto</string>
    <string name="check_vote_button">Consultar Voto</string>
    <string name="vote_result_title">Você votou em:</string>
    <string name="vote_result">BOM</string>
    <string name="result_vote_title">Resultado dos Votos</string>
    <string name="result_field_otimo">Ótimo:</string>
    <string name="result_field_bom">Bom:</string>
    <string name="result_field_regular">Regular:</string>
    <string name="result_field_ruim">Ruim:</string>
    <string name="result_field_total">Total:</string>
    <string name="code_vote">Código do Voto:</string>
    <string name="copy_code">Copiar Código</string>
    <string name="error_invalid_code">Código Inválido</string>
    <string name="error_code_blank">Informe o Código do Voto</string>
    <string name="fill_all_fields_error">Preencha Todos os Campos</string>
    <string name="copy_text_message">Texto copiado para a área de transferência!</string>
    <string name="label_copy_text">Código</string>
    <string name="user_already_vote_error">%1$s, você já votou.</string>
    <string name="select_option_error">Por favor, selecione uma opção</string>
</resources>