<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.voto.VotoActivity"
    android:padding="15dp"
    android:background="@color/light_brown_beige">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_vote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/dark_brown" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_vote"
        android:textAlignment="center"
        android:textColor="@color/dark_brown"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="44dp"
            android:text="@string/question"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/dark_brown"/>

        <RadioButton
            android:id="@+id/radio_otimo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_otimo"
            android:textColor="@color/dark_brown"/>

        <RadioButton
            android:id="@+id/radio_bom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_bom"
            android:textColor="@color/dark_brown"/>

        <RadioButton
            android:id="@+id/radio_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_regular"
            android:textColor="@color/dark_brown"/>

        <RadioButton
            android:id="@+id/radio_ruim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_ruim"
            android:textColor="@color/dark_brown"/>
    </RadioGroup>

    <Button
        android:id="@+id/button_vote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/rosy_beige"
        android:text="@string/vote_button"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group" />

</androidx.constraintlayout.widget.ConstraintLayout>