<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_brown_beige"
    android:padding="20dp"
    tools:context=".ui.vote.VoteActivity">

    <ImageView
        android:id="@+id/arrow_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/dark_brown" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_vote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/dark_brown" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_vote"
        android:textAlignment="center"
        android:textColor="@color/dark_brown"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <RadioGroup
        android:layout_marginTop="20dp"
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        tools:layout_editor_absoluteX="20dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/question"
            android:textAlignment="center"
            android:textColor="@color/dark_brown"
            android:textSize="23sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radio_otimo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_brown"
            android:drawableStart="@drawable/ic_otimo"
            android:drawablePadding="10dp"
            android:drawableTint="@color/dark_brown"
            android:text="@string/option_otimo"
            android:textColor="@color/dark_brown"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radio_bom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_bom"
            android:drawablePadding="10dp"
            android:drawableTint="@color/dark_brown"
            android:text="@string/option_bom"
            android:textColor="@color/dark_brown"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radio_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_regular"
            android:drawablePadding="10dp"
            android:drawableTint="@color/dark_brown"
            android:text="@string/option_regular"
            android:textColor="@color/dark_brown"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radio_ruim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_ruim"
            android:drawablePadding="10dp"
            android:drawableTint="@color/dark_brown"
            android:text="@string/option_ruim"
            android:textColor="@color/dark_brown"
            android:textSize="20sp" />
    </RadioGroup>

    <Button
        android:id="@+id/vote_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/rosy_beige"
        android:paddingHorizontal="30dp"
        android:paddingVertical="20dp"
        android:text="@string/vote_button"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.32" />

</androidx.constraintlayout.widget.ConstraintLayout>