<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_brown_beige"
    android:padding="20dp"
    tools:context=".ui.result.ResultActivity">

    <ImageView
        android:id="@+id/arrow_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/dark_brown" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/dark_brown" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_vote_title"
        android:textAlignment="center"
        android:textColor="@color/dark_brown"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <LinearLayout
        android:id="@+id/layout_otimo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/layout_bom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4">

        <TextView
            android:id="@+id/textview_otimo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_field_otimo"
            android:textColor="@color/dark_brown"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />

        <TextView
            android:id="@+id/otimo_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_brown"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_bom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/layout_regular"
        app:layout_constraintEnd_toEndOf="@+id/layout_otimo"
        app:layout_constraintStart_toStartOf="@+id/layout_otimo"
        app:layout_constraintTop_toBottomOf="@+id/layout_otimo">

        <TextView
            android:id="@+id/textview_bom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_field_bom"
            android:textColor="@color/dark_brown"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />

        <TextView
            android:id="@+id/bom_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_brown"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/layout_ruim"
        app:layout_constraintEnd_toEndOf="@+id/layout_bom"
        app:layout_constraintStart_toStartOf="@+id/layout_bom"
        app:layout_constraintTop_toBottomOf="@+id/layout_bom">

        <TextView
            android:id="@+id/textview_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_field_regular"
            android:textColor="@color/dark_brown"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />

        <TextView
            android:id="@+id/regular_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_brown"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_ruim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/layout_total"
        app:layout_constraintEnd_toEndOf="@+id/layout_regular"
        app:layout_constraintStart_toStartOf="@+id/layout_regular"
        app:layout_constraintTop_toBottomOf="@+id/layout_regular">

        <TextView
            android:id="@+id/textview_ruim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_field_ruim"
            android:textColor="@color/dark_brown"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />

        <TextView
            android:id="@+id/ruim_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_brown"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/layout_ruim"
        app:layout_constraintStart_toStartOf="@+id/layout_ruim"
        app:layout_constraintTop_toBottomOf="@+id/layout_ruim">

        <TextView
            android:id="@+id/textview_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_field_total"
            android:textColor="@color/dark_brown"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />

        <TextView
            android:id="@+id/total_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_brown"
            android:textSize="30sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>